--- a/Audiotheque/Audiotheque.csproj
+++ b/Audiotheque/Audiotheque.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Artist.cs" />
+    <Compile Include="IntelligentPlaylist.cs" />
+    <Compile Include="Music.cs" />
+    <Compile Include="MusicLibrary.cs" />
+    <Compile Include="Playlist.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StandardPlaylist.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
